@@ -1,3 +1,5 @@
+    - added index key example to QUICKSTART guide (Monte)
+
 Version 1.4.6
 -------------
     - fixed bug with {assign ...} when passing an empty value. (Monte)
